rf(auth): updated login response
